# hypercalibrate

./: .gitignore  Cargo.toml  Dockerfile.cross  LICENSE  README.md  config.example.toml  deploy.conf.example  deploy.sh  docker-build.sh  install-rpi.sh  local-build.sh  test.sh  update.sh
.cargo/: config.toml
scripts/: collect-logs.sh  color_calibrate.py  color_test.py  install-rpi.sh  restart-with-hyperion.sh  setup-udev-rules.sh  setup-v4l2loopback.sh  test.sh  update.sh  ustreamer.sh
scripts/camera/: camera_benchmark.py
src/: calibration.rs  camera_controls.rs  capture.rs  color.rs  config.rs  main.rs  output.rs  server.rs  system_stats.rs  transform.rs  video_settings.rs
static/: app.js  index.html  style.css
static/js/: calibration.js  camera.js  color.js  debug.js  preview.js  stats.js  touch.js  utils.js  video.js
