[package]
name = "hypercalibrate"
version = "0.1.0"
edition = "2021"
authors = ["instance.id"]
description = "Low-latency TV screen calibration for Hyperion ambient lighting"
license = "MIT"
readme = "README.md"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Video capture (V4L2)
v4l = "0.14"
libc = "0.2"

# Image processing
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
imageproc = "0.23"
nalgebra = "0.32"
jpeg-decoder = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async utilities
tokio-stream = "0.1"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Embedded web assets
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"

# Base64 for image encoding
base64 = "0.21"

# Atomic/concurrent access for live calibration
parking_lot = "0.12"
arc-swap = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 4
